First Commit for Testing Purposes

--- a/WebsiteCV.html
+++ b/WebsiteCV.html
@@ -38,5 +38,6 @@
     <p>
       Welcome, I am Bogdan, and this website exists as an extension to my CV
     </p>
+    <p>I am making a change to GitHub for testing purposes</p>
   </body>
 </html>
