--- a/WebsiteCV.html
+++ b/WebsiteCV.html
@@ -39,5 +39,6 @@
       Welcome, I am Bogdan, and this website exists as an extension to my CV
     </p>
     <p>I am making a change to GitHub for testing purposes</p>
+    <p>Ohayoo, change 2</p>
   </body>
 </html>
