Separating CSS into separate folder

--- a/WebsiteCV.html
+++ b/WebsiteCV.html
@@ -2,30 +2,7 @@
 <html>
   <head>
     <title>Voicu Bogdan - System Engineer</title>
-    <style>
-      body {
-        background-image: url(Images/StockBackground.webp);
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-size: 100% 100%;
-      }
-      img.portrait {
-        width: 200px;
-        border-radius: 80px;
-        float: left;
-        margin-right: 20px;
-      }
-      .contactdetails_email_desc {
-        font-weight: bold;
-        float: left;
-      }
-      .contactdetails_email {
-        font-style: italic;
-        float: left;
-        background-color: rgb(14, 12, 156);
-        background-size: 20px;
-      }
-    </style>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <img class="portrait" src=Images/BogdanPhoto.jpg>
@@ -38,8 +15,5 @@
     <p>
       Welcome, I am Bogdan, and this website exists as an extension to my CV
     </p>
-    <p>I am making a change to GitHub for testing purposes</p>
-    <p>Ohayoo, change 2</p>
-    <p>Konichiwa, This is change number 3</p>
   </body>
 </html>
