changing the sidebar functionality

--- a/WebsiteCV.html
+++ b/WebsiteCV.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <button onclick="actionPanel()">Press me</button>
+    <br />
+
     <div class="panel" id="panel">
-      <div class="panel-over" id="panel-over"></div>
       <img class="portrait" src=Images/BogdanPhoto.jpg>
       <br />
       <br />
@@ -19,7 +20,6 @@
           >Bogdan.Bog.Voicu@gmail.com
         </p>
       </div>
-
       <br />
       <p>
         Welcome, I am Bogdan, and this website exists as an extension to my CV
@@ -27,6 +27,11 @@
       <br />
       <p>It is obviously, currently, a work in progress :)</p>
     </div>
+    <div class="main-page"></div>
+    <div class="panel-arrow" id="panel-arrow">
+      <p>></p>
+    </div>
+
     <script src="scripts/common.js"></script>
   </body>
 </html>
